--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -35,6 +35,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-edit">
+      <use xlink:href="/svg-defs.svg#icon-edit"></use>
+    </svg>
+    <span class="icon-container-name">edit</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-trash">
       <use xlink:href="/svg-defs.svg#icon-trash"></use>
     </svg>
