Adding header menus and card satuses

--- a/views/components/containers/card-status.html
+++ b/views/components/containers/card-status.html
@@ -7,8 +7,8 @@
     </h2>
     <div class="action-menu">
       <button class="btn btn-icon handle">
-        <svg class="icon-kebab">
-          <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+        <svg class="icon-menu-narrow">
+          <use xlink:href="/svg-defs.svg#icon-menu-narrow"></use>
         </svg>
         <span class="label">Menu</span>
       </button>
@@ -87,8 +87,8 @@
     </h2>
     <div class="action-menu">
       <button class="btn btn-icon handle">
-        <svg class="icon-kebab">
-          <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+        <svg class="icon-menu-narrow">
+          <use xlink:href="/svg-defs.svg#icon-menu-narrow"></use>
         </svg>
         <span class="label">Menu</span>
       </button>
@@ -167,8 +167,8 @@
     </h2>
     <div class="action-menu active">
       <button class="btn btn-icon handle">
-        <svg class="icon-kebab">
-          <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+        <svg class="icon-menu-narrow">
+          <use xlink:href="/svg-defs.svg#icon-menu-narrow"></use>
         </svg>
         <span class="label">Menu</span>
       </button>
@@ -247,8 +247,8 @@
     </h2>
     <div class="action-menu">
       <button class="btn btn-icon handle">
-        <svg class="icon-kebab">
-          <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+        <svg class="icon-menu-narrow">
+          <use xlink:href="/svg-defs.svg#icon-menu-narrow"></use>
         </svg>
         <span class="label">Menu</span>
       </button>
