--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -434,10 +434,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-kebab">
-      <use xlink:href="/svg-defs.svg#icon-kebab"></use>
+    <svg class="icon-menu-narrow">
+      <use xlink:href="/svg-defs.svg#icon-menu-narrow"></use>
     </svg>
-    <span class="icon-container-name">Kebab</span>
+    <span class="icon-container-name">menu-narrow</span>
   </div>
 
   <div class="icon-container">
