--- a/sass/styleguide/objects/_panel.scss
+++ b/sass/styleguide/objects/_panel.scss
@@ -78,7 +78,7 @@
     top: 1rem;
     left: 0;
 
-    .icon-kebab {
+    .icon-menu-narrow {
         margin-left: .6rem;
         fill: #36C4CF;
     }
