Add reload icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -460,4 +460,11 @@
     </svg>
     <span class="icon-container-name">Toggle</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-reload">
+      <use xlink:href="/svg-defs.svg#icon-reload"></use>
+    </svg>
+    <span class="icon-container-name">Reload</span>
+  </div>
 </div>
