Added check and check radius icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -467,4 +467,18 @@
     </svg>
     <span class="icon-container-name">Reload</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-check">
+      <use xlink:href="/svg-defs.svg#icon-check"></use>
+    </svg>
+    <span class="icon-container-name">check</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-check-radius">
+      <use xlink:href="/svg-defs.svg#icon-check-radius"></use>
+    </svg>
+    <span class="icon-container-name">check-radius</span>
+  </div>
 </div>
