Add icon goal radius

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -481,4 +481,11 @@
     </svg>
     <span class="icon-container-name">check-radius</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-goal-radius">
+      <use xlink:href="/svg-defs.svg#icon-goal-radius"></use>
+    </svg>
+    <span class="icon-container-name">goal-radius</span>
+  </div>
 </div>
