adds the .capitalize helper

--- a/sass/styleguide/sandbox.scss
+++ b/sass/styleguide/sandbox.scss
@@ -89,5 +89,6 @@ This library is divided in the following sections:
 @import "helpers/position";
 @import "helpers/white-spacing";
 @import "helpers/with-caret";
+@import "helpers/texts";
 
 /* 7. Vendor */
