Added info-radius icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -488,4 +488,11 @@
     </svg>
     <span class="icon-container-name">goal-radius</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-info-radius">
+      <use xlink:href="/svg-defs.svg#icon-info-radius"></use>
+    </svg>
+    <span class="icon-container-name">info-radius</span>
+  </div>
 </div>
