--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -98,6 +98,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-teams">
+      <use xlink:href="/svg-defs.svg#icon-teams"></use>
+    </svg>
+    <span class="icon-container-name">teams</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-nut">
       <use xlink:href="/svg-defs.svg#icon-nut"></use>
     </svg>
