Add icon account

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -91,6 +91,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-account">
+      <use xlink:href="/svg-defs.svg#icon-account"></use>
+    </svg>
+    <span class="icon-container-name">account</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-user">
       <use xlink:href="/svg-defs.svg#icon-user"></use>
     </svg>
