Add question radius icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -509,4 +509,11 @@
     </svg>
     <span class="icon-container-name">info-radius</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-question-radius">
+      <use xlink:href="/svg-defs.svg#icon-question-radius"></use>
+    </svg>
+    <span class="icon-container-name">question-radius</span>
+  </div>
 </div>
