Set normal font weight for tooltips

--- a/sass/styleguide/objects/_tooltips.scss
+++ b/sass/styleguide/objects/_tooltips.scss
@@ -16,6 +16,7 @@ $tooltip-text-color:       color($name: "background", $hue: "light");
   display: none;
   font-size: 1.3rem;
   line-height: 1.4;
+  font-weight: normal;
   padding: 1rem;
   pointer-events: none;
   position: absolute;
