Add top right arrow

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -516,4 +516,11 @@
     </svg>
     <span class="icon-container-name">question-radius</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-top-right-arrow">
+      <use xlink:href="/svg-defs.svg#icon-top-right-arrow"></use>
+    </svg>
+    <span class="icon-container-name">top-right-arrow</span>
+  </div>
 </div>
