--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -523,4 +523,11 @@
     </svg>
     <span class="icon-container-name">top-right-arrow</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-image">
+      <use xlink:href="/svg-defs.svg#icon-image"></use>
+    </svg>
+    <span class="icon-container-name">image</span>
+  </div>
 </div>
