Add icon plus radius

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -530,4 +530,11 @@
     </svg>
     <span class="icon-container-name">image</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-plus-radius">
+      <use xlink:href="/svg-defs.svg#icon-plus-radius"></use>
+    </svg>
+    <span class="icon-container-name">plus-radius</span>
+  </div>
 </div>
