Make radio button styling compatible with Firefox

--- a/views/components/forms/radio-buttons.html
+++ b/views/components/forms/radio-buttons.html
@@ -1,4 +1,8 @@
-<input id="spanish-lang" class="input-radio" type="radio" name="language">
-<label for="spanish-lang">Spanish</label>
-<input id="english-lang" class="input-radio ml4" type="radio" name="language">
-<label for="english-lang">English</label>
+<label class="input-radio">
+  <input id="spanish-lang" type="radio" name="language">
+  <span>Spanish</span>
+</label>
+<label class="input-radio ml4">
+  <input id="english-lang" type="radio" name="language">
+  <span>English</span>
+</label>
