--- a/sass/styleguide/objects/_forms.scss
+++ b/sass/styleguide/objects/_forms.scss
@@ -1,7 +1,7 @@
-$input-height:        3.6rem;
-$input-line-height:   2.4rem;
+$input-height: 3.6rem;
+$input-line-height: 2.4rem;
 $input-default-width: 20rem;
-$input-v-padding:     ($input-height - $input-line-height)/2;
+$input-v-padding: ($input-height - $input-line-height)/2;
 
 @mixin input-base-error {
     background-color: color($name: "error", $variant: "tertiary");
@@ -208,41 +208,52 @@ $input-v-padding:     ($input-height - $input-line-height)/2;
 
 // Radio buttons styling.
 .input-radio {
-  background-color: color($name: "border", $variant: "secondary", $hue: "light");
-  border-radius: 100%;
-  border: 1px solid color($name: "background", $hue: "light");
-  box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.09);
-  cursor: pointer;
-  display: inline-block;
-  height: 2rem;
-  position: relative;
-  vertical-align: middle;
-  width: 2rem;
-  -moz-appearance: none;
-  -webkit-appearance: none;
+    position: relative;
 
-  &:after {
-      background: color($name: "background", $hue: "light");
-      border-radius:100%;
-      border: 1px solid transparent;
-      box-shadow: 0 1px 0 rgba(0, 0, 0, 0.08);
-      content: '';
-      display: block;
-      height: 1rem;
-      left: 50%;
-      margin-left: -.5rem;
-      margin-top: -.5rem;
-      position: relative;
-      top: 50%;
-      width: 1rem;
-  }
+    &:before {
+        background-color: color($name: "border", $variant: "secondary", $hue: "light");
+        border-radius: 100%;
+        border: 1px solid color($name: "background", $hue: "light");
+        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.09);
+        cursor: pointer;
+        display: inline-block;
+        height: 2rem;
+        width: 2rem;
+        content: '';
+        position: absolute;
+        left: 0rem;
+        top: -.2rem;
+    }
 
-  &:checked:after {
-      background: color($name: "socialbro");
-      box-shadow: 0 1px 0 rgba(255, 255, 255, 0.33), inset 0 1px rgba(0, 0, 0, 0.09);
-  }
+    & > input[type=radio] {
+        display: none;
+        visibility: hidden;
+    }
 
-  &:focus {
-      background: color($name: "socialbro", $variant: "tertiary");
-  }
+    & > span {
+        margin-left: 2.4rem;
+    }
+
+    & > span:after {
+        background: color($name: "background", $hue: "light");
+        border-radius: 100%;
+        border: 1px solid transparent;
+        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.08);
+        content: '';
+        display: block;
+        height: 1rem;
+        width: 1rem;
+        position: absolute;
+        left: .5rem;
+        top: .3rem;
+    }
+
+    & > input[type=radio]:checked + span:after {
+        background: color($name: "socialbro");
+        box-shadow: 0 1px 0 rgba(255, 255, 255, 0.33), inset 0 1px rgba(0, 0, 0, 0.09);
+    }
+
+    &:focus {
+        background: color($name: "socialbro", $variant: "tertiary");
+    }
 }
