--- a/views/components/forms/radio-buttons.html
+++ b/views/components/forms/radio-buttons.html
@@ -1,8 +1,8 @@
 <label class="input-radio">
-  <input id="spanish-lang" type="radio" name="language">
+  <input type="radio" name="language">
   <span>Spanish</span>
 </label>
 <label class="input-radio ml4">
-  <input id="english-lang" type="radio" name="language">
+  <input type="radio" name="language">
   <span>English</span>
 </label>
