Adds the `clone` icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -42,6 +42,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-clone">
+      <use xlink:href="/svg-defs.svg#icon-clone"></use>
+    </svg>
+    <span class="icon-container-name">clone</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-trash">
       <use xlink:href="/svg-defs.svg#icon-trash"></use>
     </svg>
