Adds the expand icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -544,4 +544,11 @@
     </svg>
     <span class="icon-container-name">plus-radius</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-expand">
+      <use xlink:href="/svg-defs.svg#icon-expand"></use>
+    </svg>
+    <span class="icon-container-name">expand</span>
+  </div>
 </div>
