Added minus icon

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -546,6 +546,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-minus-radius">
+      <use xlink:href="/svg-defs.svg#icon-minus-radius"></use>
+    </svg>
+    <span class="icon-container-name">minus-radius</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-expand">
       <use xlink:href="/svg-defs.svg#icon-expand"></use>
     </svg>
