Force 100% width in tab active

--- a/sass/styleguide/objects/_tabs.scss
+++ b/sass/styleguide/objects/_tabs.scss
@@ -92,6 +92,7 @@ Navigation usually means list of links. And we have some flavours using distinct
 
 .sb-tabs-content-active {
     display: inline-table;
+    width: 100%;
 }
 
 /* Tabs block bottom */
