Added color-link helper

--- a/sass/styleguide/helpers/_colors.scss
+++ b/sass/styleguide/helpers/_colors.scss
@@ -22,3 +22,7 @@
 .color-titles-s {
     color: color($name: "titles", $variant: "secondary");
 }
+
+.color-link {
+    color: color($name: "service", $hue: "light")
+}
