--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -558,4 +558,26 @@
     </svg>
     <span class="icon-container-name">expand</span>
   </div>
+
+  <div class="icon-container">
+    <svg class="icon-copy">
+      <use xlink:href="/svg-defs.svg#icon-copy"></use>
+    </svg>
+    <span class="icon-container-name">copy</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-download">
+      <use xlink:href="/svg-defs.svg#icon-download"></use>
+    </svg>
+    <span class="icon-container-name">download</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-log-list">
+      <use xlink:href="/svg-defs.svg#icon-log-list"></use>
+    </svg>
+    <span class="icon-container-name">log-list</span>
+  </div>
+
 </div>
