--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -580,4 +580,11 @@
     <span class="icon-container-name">log-list</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-draft">
+      <use xlink:href="/svg-defs.svg#icon-draft"></use>
+    </svg>
+    <span class="icon-container-name">draft</span>
+  </div>
+
 </div>
