Add calendar and synchro icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -587,4 +587,18 @@
     <span class="icon-container-name">draft</span>
   </div>
 
+  <div class="icon-container">
+    <svg class="icon-calendar">
+      <use xlink:href="/svg-defs.svg#icon-calendar"></use>
+    </svg>
+    <span class="icon-container-name">calendar</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-synchro">
+      <use xlink:href="/svg-defs.svg#icon-synchro"></use>
+    </svg>
+    <span class="icon-container-name">Synchro</span>
+  </div>
+
 </div>
