Add new main nav icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -7,6 +7,62 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-house">
+      <use xlink:href="/svg-defs.svg#icon-house"></use>
+    </svg>
+    <span class="icon-container-name">house</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-community">
+      <use xlink:href="/svg-defs.svg#icon-group-people"></use>
+    </svg>
+    <span class="icon-container-name">group-people</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-twitter-ads">
+      <use xlink:href="/svg-defs.svg#icon-twitter-ads"></use>
+    </svg>
+    <span class="icon-container-name">twitter-ads</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-monitoring">
+      <use xlink:href="/svg-defs.svg#icon-monitoring"></use>
+    </svg>
+    <span class="icon-container-name">monitoring</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-reports">
+      <use xlink:href="/svg-defs.svg#icon-piechart-reverse"></use>
+    </svg>
+    <span class="icon-container-name">piechart-reverse</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-microscope">
+      <use xlink:href="/svg-defs.svg#icon-microscope"></use>
+    </svg>
+    <span class="icon-container-name">microscope</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-magnet">
+      <use xlink:href="/svg-defs.svg#icon-magnet"></use>
+    </svg>
+    <span class="icon-container-name">magnet</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-target">
+      <use xlink:href="/svg-defs.svg#icon-target"></use>
+    </svg>
+    <span class="icon-container-name">target</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-twitter">
       <use xlink:href="/svg-defs.svg#icon-twitter"></use>
     </svg>
@@ -382,13 +438,6 @@
       <use xlink:href="/svg-defs.svg#icon-circle-check"></use>
     </svg>
     <span class="icon-container-name">circle-check</span>
-  </div>
-
-  <div class="icon-container">
-    <svg class="icon-monitoring">
-      <use xlink:href="/svg-defs.svg#icon-monitoring"></use>
-    </svg>
-    <span class="icon-container-name">monitoring</span>
   </div>
 
   <div class="icon-container">
