Remove duplicated icon and doc for icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -91,10 +91,52 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-instagram-comment">
+      <use xlink:href="/svg-defs.svg#icon-instagram-comment"></use>
+    </svg>
+    <span class="icon-container-name">instagram-comment</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-instagram-love">
+      <use xlink:href="/svg-defs.svg#icon-instagram-love"></use>
+    </svg>
+    <span class="icon-container-name">instagram-love</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-open-in-instagram">
+      <use xlink:href="/svg-defs.svg#icon-open-in-instagram"></use>
+    </svg>
+    <span class="icon-container-name">open-in-instagram</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-kred">
+      <use xlink:href="/svg-defs.svg#icon-kred"></use>
+    </svg>
+    <span class="icon-container-name">kred</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-edit">
       <use xlink:href="/svg-defs.svg#icon-edit"></use>
     </svg>
     <span class="icon-container-name">edit</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-edit-tags">
+      <use xlink:href="/svg-defs.svg#icon-edit-tags"></use>
+    </svg>
+    <span class="icon-container-name">edit-tags</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-edit-notes">
+      <use xlink:href="/svg-defs.svg#icon-edit-notes"></use>
+    </svg>
+    <span class="icon-container-name">edit-notes</span>
   </div>
 
   <div class="icon-container">
@@ -116,6 +158,27 @@
       <use xlink:href="/svg-defs.svg#icon-close"></use>
     </svg>
     <span class="icon-container-name">close</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-block-user">
+      <use xlink:href="/svg-defs.svg#icon-block-user"></use>
+    </svg>
+    <span class="icon-container-name">block-user</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-individual-bttt">
+      <use xlink:href="/svg-defs.svg#icon-individual-bttt"></use>
+    </svg>
+    <span class="icon-container-name">individual-bttt</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-mute-user">
+      <use xlink:href="/svg-defs.svg#icon-mute-user"></use>
+    </svg>
+    <span class="icon-container-name">mute-user</span>
   </div>
 
   <div class="icon-container">
@@ -326,6 +389,13 @@
       <use xlink:href="/svg-defs.svg#icon-usermail"></use>
     </svg>
     <span class="icon-container-name">usermail</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-email-into-profiles">
+      <use xlink:href="/svg-defs.svg#icon-email-into-profiles"></use>
+    </svg>
+    <span class="icon-container-name">email-into-profiles</span>
   </div>
 
   <div class="icon-container">
@@ -641,6 +711,12 @@
       <use xlink:href="/svg-defs.svg#icon-calendar"></use>
     </svg>
     <span class="icon-container-name">calendar</span>
+  </div>
+
+  <svg class="icon-burguer">
+      <use xlink:href="/svg-defs.svg#icon-burguer"></use>
+    </svg>
+    <span class="icon-container-name">burguer</span>
   </div>
 
   <div class="icon-container">
