Update twitterads icon and remove piechart reverse

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -21,10 +21,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-twitter-ads">
-      <use xlink:href="/svg-defs.svg#icon-twitter-ads"></use>
+    <svg class="icon-promoted-boxed">
+      <use xlink:href="/svg-defs.svg#icon-promoted-boxed"></use>
     </svg>
-    <span class="icon-container-name">twitter-ads</span>
+    <span class="icon-container-name">promoted-boxed</span>
   </div>
 
   <div class="icon-container">
@@ -35,10 +35,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-reports">
-      <use xlink:href="/svg-defs.svg#icon-piechart-reverse"></use>
+    <svg class="icon-report">
+      <use xlink:href="/svg-defs.svg#icon-report"></use>
     </svg>
-    <span class="icon-container-name">piechart-reverse</span>
+    <span class="icon-container-name">report</span>
   </div>
 
   <div class="icon-container">
@@ -515,13 +515,6 @@
       <use xlink:href="/svg-defs.svg#icon-piechart"></use>
     </svg>
     <span class="icon-container-name">piechart</span>
-  </div>
-
-  <div class="icon-container">
-    <svg class="icon-report">
-      <use xlink:href="/svg-defs.svg#icon-report"></use>
-    </svg>
-    <span class="icon-container-name">report</span>
   </div>
 
   <div class="icon-container">
