Fix problem in burger container

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -706,7 +706,8 @@
     <span class="icon-container-name">calendar</span>
   </div>
 
-  <svg class="icon-burguer">
+  <div class="icon-container">
+    <svg class="icon-burguer">
       <use xlink:href="/svg-defs.svg#icon-burguer"></use>
     </svg>
     <span class="icon-container-name">burguer</span>
