Add barchart, chrono-graph magnet-alt and scale icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -42,10 +42,10 @@
   </div>
 
   <div class="icon-container">
-    <svg class="icon-microscope">
-      <use xlink:href="/svg-defs.svg#icon-microscope"></use>
+    <svg class="icon-flask">
+      <use xlink:href="/svg-defs.svg#icon-flask"></use>
     </svg>
-    <span class="icon-container-name">microscope</span>
+    <span class="icon-container-name">flask</span>
   </div>
 
   <div class="icon-container">
@@ -56,10 +56,24 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-magnet-alt">
+      <use xlink:href="/svg-defs.svg#icon-magnet-alt"></use>
+    </svg>
+    <span class="icon-container-name">magnet-alt</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-target">
       <use xlink:href="/svg-defs.svg#icon-target"></use>
     </svg>
     <span class="icon-container-name">target</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-scale">
+      <use xlink:href="/svg-defs.svg#icon-scale"></use>
+    </svg>
+    <span class="icon-container-name">scale</span>
   </div>
 
   <div class="icon-container">
@@ -406,6 +420,20 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-chrono-graph">
+      <use xlink:href="/svg-defs.svg#icon-chrono-graph"></use>
+    </svg>
+    <span class="icon-container-name">chrono-graph</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-barchart">
+      <use xlink:href="/svg-defs.svg#icon-barchart"></use>
+    </svg>
+    <span class="icon-container-name">barchart</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-tag">
       <use xlink:href="/svg-defs.svg#icon-tag"></use>
     </svg>
@@ -718,6 +746,13 @@
       <use xlink:href="/svg-defs.svg#icon-synchro"></use>
     </svg>
     <span class="icon-container-name">Synchro</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-microscope">
+      <use xlink:href="/svg-defs.svg#icon-microscope"></use>
+    </svg>
+    <span class="icon-container-name">microscope</span>
   </div>
 
 </div>
