Add at-radius, bubble-cog and ragdoll-arrow icons

--- a/views/partial/icons.html
+++ b/views/partial/icons.html
@@ -336,6 +336,13 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-bubble-cog">
+      <use xlink:href="/svg-defs.svg#icon-bubble-cog"></use>
+    </svg>
+    <span class="icon-container-name">bubble-cog</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-webcam">
       <use xlink:href="/svg-defs.svg#icon-webcam"></use>
     </svg>
@@ -567,10 +574,24 @@
   </div>
 
   <div class="icon-container">
+    <svg class="icon-ragdoll-arrow">
+      <use xlink:href="/svg-defs.svg#icon-ragdoll-arrow"></use>
+    </svg>
+    <span class="icon-container-name">ragdoll-arrow</span>
+  </div>
+
+  <div class="icon-container">
     <svg class="icon-learn">
       <use xlink:href="/svg-defs.svg#icon-learn"></use>
     </svg>
     <span class="icon-container-name">learn</span>
+  </div>
+
+  <div class="icon-container">
+    <svg class="icon-at-radius">
+      <use xlink:href="/svg-defs.svg#icon-at-radius"></use>
+    </svg>
+    <span class="icon-container-name">at-radius</span>
   </div>
 
   <div class="icon-container">
